# modbus-mcp

./: Dockerfile  README.md  pyproject.toml
.github/workflows/: prod.yml  pypi.yml  test.yml
examples/openai/: README.md  main.py  pyproject.toml
examples/openai-agents/: README.md  pyproject.toml
examples/pydantic-ai/: README.md  pyproject.toml
src/modbus_mcp/: __init__.py  cli.py  server.py  settings.py
tests/: conftest.py  server_test.py  utils_test.py
