[project]
name = "modbus-mcp"
version = "0.1.12"
description = "A Model Context Protocol (MCP) server for Modbus"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastmcp>=2.5.1",
    "pymodbus>=3.9.2",
]

[project.scripts]
modbus-mcp = "modbus_mcp:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "black>=25.1.0",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
    "ruff>=0.11.11",
]
