[project]
name = "pydantic-mcp-example"
version = "0.1.10"
description = "PydanticAI MCP example"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pydantic-ai-slim[mcp,openai]>=1.80.0",
]

[dependency-groups]
dev = [
    "modbus-mcp>=0.2.1",
    "pre-commit>=4.2.0",
    "ruff>=0.12.2",
]
